fix: fixed issue with header. Header Covering the content underneath it

--- a/src/pages/AuthPage/AuthPage.module.css
+++ b/src/pages/AuthPage/AuthPage.module.css
@@ -4,7 +4,7 @@
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	padding: 15px;
+	padding: 80px 15px 15px 15px;
 	min-height: 100dvh;
 	overflow: hidden;
 }
